Fix overlap of Snap during Play Again option

--- a/Snakie_Game/styles.css
+++ b/Snakie_Game/styles.css
@@ -10,7 +10,7 @@
     background-color: green;
     border-radius: 12px;
     position: relative;
-    top: 0px;
+    top: 20px;
     left: 0px;
 }
 
@@ -46,7 +46,7 @@ body {
     width: var(--Bsnake-width);
     height: var(--Bsnake-height);
     position: relative;
-    top: -20px;
+    top: 20px;
     left: 0px;
 }
 
@@ -56,7 +56,7 @@ body {
     height: var(--Bsnake-height);
     position: absolute;
     border-radius: 8px;
-    top: 0px;
+    top: 20px;
     left: 0px;
 }
 
